kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: kbef/vprofile-db
        volumeMounts:
        - name: vpro-db-data
          mountPath: /var/lib/mysql
        ports:
        - name: vprodb-port
          containerPort: 3306
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: vpro-db-data
        persistentVolumeClaim:
          claimName: db-pv-claim
