kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      name: vprodb-port
