kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vpromc
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
      name: vprocache-port
