kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq01
spec:
  selector:
    app: vprormq
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: vprocache-port
